--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="shortcut icon" href="images/f.png" type="image/x-icon">
+
     <title>Fatinha</title>
 </head>
 
@@ -23,8 +25,8 @@
             <hr>
 
             <div class="box-links w3-center w3-xxlarge">
-                <a href="https://www.linkedin.com/in/ifatima14/" target="_blank" class="w3-hover-opacity w3-margin-right"><i
-                        class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ifatima14/" target="_blank"
+                    class="w3-hover-opacity w3-margin-right"><i class="fa fa-linkedin"></i></a>
                 <a href="https://twitter.com/_ifatinha" target="_blank" class="w3-hover-opacity w3-margin-right"><i
                         class="fa fa-twitter"></i></a>
                 <a href="https://github.com/ifatinha" target="_blank" class="w3-hover-opacity w3-margin-right"><i
