--- a/index.html
+++ b/index.html
@@ -6,36 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="css/style.css">
-
     <link rel="shortcut icon" href="images/f.png" type="image/x-icon">
-
-    <title>Fatinha</title>
+    <link rel="stylesheet" href="css/minireset.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Fatima | Web Developer</title>
 </head>
 
 <body>
-    <main class="flex w3-display-container w3-animate-opacity w3-text-white">
-        <div class="w3-display-middle">
-            <h1 class="w3-animate-top w3-large w3-text-red w3-monospace">Hello, World!</h1>
-            <p class="w3-jumbo">I'm Fatima Ferreira.</p>
-            <p class="w3-large w3-monospace">A Full Stack Web Developer</p>
 
-            <hr>
+    <div class="wallpaper"></div>
+    <div class="content">
+        <aside class="side">
+            <figure class="picture">
+                <div class="picture-shadow"></div>
+                <img alt="Portrait of Fatima Ferreira" class="picture-image" id="pictureImage"
+                    src="/images/IMG_20180914_063811716-01.jpg" srcset="/images/IMG_20180914_063811716-01.jpg 1x,
+                    /images/IMG_20180914_063811716-01.jpg 2x,
+                    /images/IMG_20180914_063811716-01.jpg 3x" width="320" height="320">
+            </figure>
+        </aside>
 
-            <div class="box-links w3-center w3-xxlarge">
-                <a href="https://www.linkedin.com/in/ifatima14/" target="_blank"
-                    class="w3-hover-opacity w3-margin-right"><i class="fa fa-linkedin"></i></a>
-                <a href="https://twitter.com/_ifatinha" target="_blank" class="w3-hover-opacity w3-margin-right"><i
-                        class="fa fa-twitter"></i></a>
-                <a href="https://github.com/ifatinha" target="_blank" class="w3-hover-opacity w3-margin-right"><i
-                        class="fa fa-github"></i></a>
-                <a href="mailto:fferreira913@gmail.com" target="_blank" class="w3-hover-opacity w3-margin-right"><i
-                        class="fa fa-envelope"></i></a>
+        <main class="about">
+            <h1 class="name">
+                Hi, I'm Fatima Ferreira
+            </h1>
+            <p class="job">
+                A Full Stack Web Developer
+            </p>
+            <hr class="hr">
+            <div class="description">
+                <p>
+                    Systems analyst, passionate about technology, lover of books, movies and travel.
+                </p>
             </div>
-        </div>
-    </main>
+            <div class="contact">
+                <a href="mailto:fferreira913@gmail.com" class="button">
+                    Get in touch
+                </a>
+            </div>
+
+            <ul class="social">
+                <li>
+                    <a href="https://twitter.com/_ifatinha" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/ifatinha" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/ifatima14/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+        </main>
+    </div>
+
 </body>
+
+<script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 
 </html>
