Add animations.css archive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="images/f.png" type="image/x-icon">
     <link rel="stylesheet" href="css/minireset.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animations.css">
     <title>Fatima | Web Developer</title>
 </head>
 
