--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/images/f.png" type="image/x-icon">
+    <link rel="shortcut icon" href=".//images/f.png" type="image/x-icon">
     <link rel="stylesheet" href="css/minireset.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animations.css">
@@ -21,9 +21,9 @@
             <figure class="picture" id="picture">
                 <div class="picture-shadow"></div>
                 <img alt="Portrait of Fatima Ferreira" class="picture-image" id="pictureImage"
-                    src="images/IMG_20180914_063811716-01.jpg" srcset="images/IMG_20180914_063811716-01.jpg 1x,
-                    images/IMG_20180914_063811716-01.jpg 2x,
-                    images/IMG_20180914_063811716-01.jpg 3x" width="320" height="320">
+                    src="./images/20221102_0804416.jpg" srcset="./images/20221102_0804416.jpg 1x,
+                    ./images/20221102_0804416.jpg 2x,
+                    ./images/20221102_0804416.jpg 3x" width="320" height="320">
             </figure>
         </aside>
 
