--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Hi, I'm Fatima Ferreira
             </h1>
             <p class="job">
-                A Full Stack Web Developer
+                A Full Stack Developer
             </p>
             <hr class="hr">
             <div class="description">
